--- a/Shipping.Tests/Shipping.Tests.csproj
+++ b/Shipping.Tests/Shipping.Tests.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Shipping.Application\Shipping.Application.csproj" />
     <ProjectReference Include="..\Shipping.Core\Shipping.Core.csproj" />
+    <ProjectReference Include="..\Shipping.Infrastructure\Shipping.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
